2008-06-24  Jonathon Jongsma  <jonathon.jongsma@collabora.co.uk>

Reviewed by Simon.

        https://bugs.webkit.org/show_bug.cgi?id=18459

        Implemented basic text-shadow support for the Qt port.

Canonical link: https://commits.webkit.org/27211@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34763 268f45cc-cd09-0410-ab3c-d52691b4dbfc